--- a/not/noticias-stylebody.css
+++ b/not/noticias-stylebody.css
@@ -28,7 +28,7 @@
     width: 100vw;
     height: calc(100vh - 80px);
     min-height: 500px;
-    background-image: url('../IMAGENES/Noticia.jpg');
+    background-image: url('../IMAGENES/Noticia.jpeg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
